--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,20 @@
+{% load static%}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static "style.css" %}">
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello {{username}} age: {{age}} occupation: {{occupation}}</h1>
+    <h1>Enter your text</h1>
+    <form method="POST" action="counter">
+      {% csrf_token %}
+      <textarea name="text" id="" cols="60" rows="30"></textarea>
+      <br />
+      <input type="submit" />
+    </form>
   </body>
 </html>
